--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -2,8 +2,9 @@
     --color-bg-0: #f6fff8;
     --color-bg-1: #eaf4f4;
     --color-bg-2: #cce3de;
-    --color-theme-1: #e63946;
+    --color-theme-1: #457B9D;
     --color-theme-2: #1d3557;
+    --color-theme-3: #A8DADC;
     --color-text: rgba(0, 0, 0, 0.7);
     --column-width: 42rem;
     --column-margin-top: 4rem;
